@@ -1,4 +1,4 @@
-Title: Google Analytics APi dimensions and metrics
+Title: Google Analytics API dimensions and metrics
 Description: Lists all the dimensions and metrics for Core Reporting API
 Author: Artem Klevtsov
 DisplayMode: normal
