@@ -1,0 +1,1 @@
+{"web":{"client_id":"144394141628-uqlh05tircblcu4sq386lm2gqotrgmct.apps.googleusercontent.com","auth_uri":"https://accounts.google.com/o/oauth2/auth","token_uri":"https://accounts.google.com/o/oauth2/token","auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs","client_secret":"jP9HcgDYiL386zGHR3_EMPDH","redirect_uris":["https://artemklevtsov.shinyapps.io/ga-auth"]}}
